--- a/acaialtostop/package.json
+++ b/acaialtostop/package.json
@@ -30,6 +30,7 @@
         "react-icons": "^5.5.0",
         "tailwindcss": "^3.4.1",
         "typescript": "^5.3.3",
+        "vercel": "^46.0.2",
         "web-push": "^3.6.7",
         "ws": "^8.18.2"
     },
